src/styles/Contact.css
.contact h2 {
  font-weight: 700;
  font-size: 16px;
  margin-top: 16px;
  margin-bottom: 22px;
  display: inline-block;
  position: relative;
}

.contact h2::after {
  content: "";
  position: absolute;
  top: calc(100% + 6px);
  right: 0;
  width: 100%;
  height: 3px;
  background-color: rgb(9, 9, 243);
}

.contact h2 {
  margin-top: 32px;
}

.contact .social-networks-icons {
  display: flex;
  justify-content: center;
  align-items: center;
}

.contact .social-networks-icons a {
  margin: 0 10px;
  position: relative;
}

.contact .social-networks-icons a::after {
  content: "";
  position: absolute;
  top: calc(100% - 2px);
  right: 0;
  width: 100%;
  height: 2px;
}

.contact .social-networks-icons a img {
  width: 20px;
  transition: ease 120ms;
}

.contact .social-networks-icons a:hover > img {
  transform: translateY(-4px);
}

#github::after {
  background-color: #181717;
}

#dribbble::after {
  background-color: #EA4C89;
}

#telegram::after {
  background-color: #2CA5E0;
}

#medium::after {
  background-color: #000;
}

#linkedin::after {
  background-color: #0A66C2;
}

#twitter::after {
  background-color: #1DA1F2;
}

#tradingview::after {
  background-color: #2962FF;
}

#gmail::after {
  background-color: #EA4335;
}

